fixing bottom spacing

--- a/public/src/css/scheduling.css
+++ b/public/src/css/scheduling.css
@@ -58,23 +58,6 @@ body {
   margin: auto;
 }
 
-/* Footer CSS */
-.footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #f3bd56;
-  color: grey;
-  text-align: center;
-  height: 50px;
-}
-
-/* Footer text */
-.footer p {
-  padding-top: 10px;
-}
-
 /* Red heart CSS for footer text */
 .redheart {
   color: #ff0000;
@@ -190,4 +173,25 @@ body {
 #attendeeEmail {
   width: 45vw !important;
   margin: 0 auto;
+}
+
+.button {
+  margin-bottom: 90px;
+}
+
+/* Footer CSS */
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f3bd56;
+  color: grey;
+  text-align: center;
+  height: 50px;
+}
+
+/* Footer text */
+.footer p {
+  padding-top: 10px;
 }
